<resources>
    <string name="app_name">股扒扒</string>
    <string name="special_sup">盘前特供</string>
    <string name="more">更多</string>
    <string name="daily_good_stock">资讯\n精选</string>
    <string name="teacher_living">名师直播</string>
    <string name="capital_movements">资金动向</string>
    <string name="look_more">查看更多</string>
    <string name="stock">股票</string>
    <string name="increase_market_value">增特市值</string>
    <string name="proportion_of_total_equity">占总股本比例%</string>
    <string name="north_capital_buy">北资买入</string>
    <string name="institutions_buy">机构买入</string>
    <string name="financing_buy">融资买入</string>
    <string name="capital_movements_warm">注：排名先后按买入增持资金占总股本比例从大到小</string>
    <string name="risk_radar">风险雷达</string>
    <string name="search_hint">输入股票/基金名称或代码</string>\
    <string name="UnSub">预约</string>
    <string name="IsSub">已预约</string>
    <string name="YsLabel">越声栏目</string>
    <string name="MoreFocus">更多栏目</string>
    <string name="TagTCode">登记编号：</string>
    <string name="IsFocus">已关注</string>
    <string name="AddFocus">+关注</string>
    <string name="Focus">关注</string>
    <string name="LoginPageTip">验证即登录，未注册则自动创建账号</string>
    <string name="LogoutPageTip">注销账号将可能影响正常接收服务</string>
    <string name="Praise">赞</string>
    <string name="Share">分享</string>
    <string name="LookRisk">查看该股其他风险</string>
    <string name="north_buy">北向买入</string>
    <string name="financing_balance">融资余额(元)</string>
    <string name="financing_balance_ration">融资余额占比%</string>
    <string name="get_teacher_id_error">获取名师ID异常</string>
    <string name="on_line_number">在线人数：</string>
    <string name="NoneFocusTip">还没有关注\n快去关注您喜爱的栏目吧~</string>
    <string name="NetError">网络异常</string>
    <string name="ArtWarm">以上内容仅供您参考和学习使用，不作为买卖依据，据此操作风险自负，投资有风险，入市需谨慎。单一个股展示不代表全部，也不代表未来业绩的承诺。</string>
    <string name="VideoWarm">以上内容和战法不能100%准确预测全部股价的涨跌走势，仅供参考和学习使用，不作为买卖依据，据此操作风险自负，投资有风险，入市需谨慎。</string>
    <string name="Cancel">取消</string>
    <string name="WeChat">微信</string>
    <string name="Friends">朋友圈</string>
    <string name="CopyLink">复制链接</string>
    <string name="YsFlashInfo">越声快讯</string>
    <string name="search_tip">输入股票/基金名称或代码</string>
    <string name="RiskText">免责声明：以上提及相关个股，仅为个股资讯提示，不作为荐股依据，投资者不应该以该信息取代其独立判断或者仅根据该信息做出策，观点仅供参考学习，不构成投资建议，操作风险自担。</string>
    <string name="AddOption">加自选</string>
    <string name="DeleteOption">删自选</string>
    <string name="search_fund">输入基金名称或代码</string>
    <string name="OptionStock">自选股</string>
    <string name="NorthOption">北向资金持股占流通盘比%</string>
    <string name="FinanceOption">融资资金占流通盘比%</string>
    <string name="FirstLevel">一级选项</string>
    <string name="SecondLevel">二级选项</string>
    <string name="ThirdLevel">三级选项</string>
    <string name="FundIndex">申万三级行业指数历史变动</string>
    <string name="FundFindForecast">预估重仓该行业的基金</string>
    <string name="ClickLogin">点击登录/注册</string>
    <string name="AboutUsDes">股扒扒是一款对上市公司大数据库进行整合股市行情，为用户提供个股风险分析、股票教学、 交易日老师在线解盘、每日个股推荐、7x24小时实时推送的应用。 不管你想学习股票入门知识，还是炒股技巧、炒股秘籍，股 市直播大咖现场传授炒股经。</string>
    <string name="VersionNumber">版本号</string>
    <string name="NoMsgWhiteLogin">暂无消息，请登录</string>
    <string name="ShareDesPart">权威名师交易日在线解盘，实战指导把握市场风向，踏准交易节奏！</string>
    <string name="SharePaFenXiShi">扒一扒最强的机构券商分析师，最新推荐哪只个股！</string>
    <string name="ShareKLine">名师天团K线秘籍，授人以鱼不如授人以渔！</string>
    <string name="ShareYSFlash">用股扒扒，7*24小时为您盯住市场风吹草动！</string>
    <string name="SharePaFengXian">手中股近期有什么风险，用股扒扒测测就知道</string>
    <string name="ShareSpecialSup">名师投顾天团为您提供，每个交易日盘前特供个股。</string>
    <string name="SharePaZiJin">聪明资金都在买这些股票！每日扒一扒，资金异动都知道。</string>
    <string name="SharePaYouZi">游资在潜伏哪些个股，每日扒一扒，游资异动早知道。</string>
    <string name="ShareChange">越声智盈·量化一号，为您扒一扒成长资金机会。</string>
    <string name="ProtocolTipStart">请你务必审慎阅读、充分理解“用户服务协议”和“股扒扒隐私政策”各条款，包括但不限于：为了更好的向你提供服务，我们需要收集你的设备标识、操作日志等信息用于分析、优化应用性能。你可阅读</string>
    <string name="UserProtocolTip">《用户服务协议》</string>
    <string name="PrivateProtocolTip">和《股扒扒隐私政策》</string>
    <string name="ProtocolTipEnd">了解详细信息。如果你同意，请点击下面按钮开始接受我们的服务。</string>
    <string name="ProtocolYes">同意并接受</string>
    <string name="ProtocolNo">暂不同意</string>
    <string name="ProtocolWarmStart">您需要同意“用户服务协议”和“股扒扒隐私政策”，方可使用本软件。请您仔细于都完整版</string>
    <string name="Agree">同意</string>
    <string name="UnAgreeExit">不同意并退出</string>
</resources>