<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/tVVHeadImg"
        android:layout_width="@dimen/d44"
        android:layout_height="@dimen/d44"
        android:layout_marginLeft="@dimen/d14"
        android:layout_marginTop="@dimen/d14"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVVFocus"
        android:layout_width="@dimen/d60"
        android:layout_height="@dimen/d24"
        android:layout_marginRight="@dimen/d14"
        android:background="@drawable/red_border_focus_radius_10_shape"
        android:gravity="center"
        android:text="@string/AddFocus"
        android:textColor="@color/main_red"
        android:textSize="@dimen/s14"
        app:layout_constraintBottom_toBottomOf="@id/tVVHeadImg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tVVHeadImg" />

    <TextView
        android:id="@+id/tVVName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/black_333"
        android:textSize="@dimen/s16"
        app:layout_constraintLeft_toRightOf="@id/tVVHeadImg"
        app:layout_constraintRight_toLeftOf="@id/tVVFocus"
        app:layout_constraintTop_toTopOf="@id/tVVHeadImg" />

    <TextView
        android:id="@+id/tVVIntro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/gray_999"
        android:textSize="@dimen/s12"
        app:layout_constraintLeft_toLeftOf="@id/tVVName"
        app:layout_constraintRight_toRightOf="@id/tVVName"
        app:layout_constraintTop_toBottomOf="@id/tVVName" />

    <ImageView
        android:id="@+id/tVVCodeImg"
        android:layout_width="@dimen/d14"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/blue_code"
        app:layout_constraintLeft_toLeftOf="@id/tVVName"
        app:layout_constraintTop_toBottomOf="@id/tVVIntro" />

    <TextView
        android:id="@+id/tVVCodeTag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:text="@string/TagTCode"
        android:textColor="@color/gray_999"
        android:textSize="@dimen/s12"
        app:layout_constraintBottom_toBottomOf="@id/tVVCodeImg"
        app:layout_constraintLeft_toRightOf="@id/tVVCodeImg"
        app:layout_constraintTop_toTopOf="@id/tVVCodeImg" />

    <TextView
        android:id="@+id/tVVCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_999"
        android:textSize="@dimen/s12"
        app:layout_constraintBottom_toBottomOf="@id/tVVCodeTag"
        app:layout_constraintLeft_toRightOf="@id/tVVCodeTag"
        app:layout_constraintRight_toRightOf="@id/tVVFocus"
        app:layout_constraintTop_toTopOf="@id/tVVCodeTag" />

    <TextView
        android:id="@+id/tVVTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d14"
        android:layout_marginRight="@dimen/d14"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/black_333"
        android:textSize="@dimen/s16"
        app:layout_constraintLeft_toLeftOf="@id/tVVHeadImg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tVVCodeImg" />

    <ImageView
        android:id="@+id/tVVImg"
        android:layout_width="168dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="h,0.75:1"
        app:layout_constraintLeft_toLeftOf="@id/tVVHeadImg"
        app:layout_constraintTop_toBottomOf="@id/tVVTitle" />

    <ImageView
        android:id="@+id/tVVPlay"
        android:layout_width="@dimen/d16"
        android:layout_height="@dimen/d16"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/white_play"
        app:layout_constraintRight_toRightOf="@id/tVVImg"
        app:layout_constraintTop_toTopOf="@id/tVVImg" />

    <TextView
        android:id="@+id/tVVPraiseNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d14"
        android:layout_marginRight="@dimen/d14"
        android:text="@string/Praise"
        android:textColor="@color/gray_999"
        android:textSize="@dimen/s14"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tVVImg" />

    <ImageView
        android:id="@+id/tVVPraiseImg"
        android:layout_width="@dimen/d16"
        android:layout_height="@dimen/d16"
        android:layout_marginRight="@dimen/d2"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/un_praise"
        app:layout_constraintBottom_toBottomOf="@id/tVVPraiseNum"
        app:layout_constraintRight_toLeftOf="@id/tVVPraiseNum"
        app:layout_constraintTop_toTopOf="@id/tVVPraiseNum" />

    <TextView
        android:id="@+id/tVVShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/d36"
        android:text="@string/Share"
        android:textColor="@color/gray_999"
        android:textSize="@dimen/s14"
        app:layout_constraintBottom_toBottomOf="@id/tVVPraiseNum"
        app:layout_constraintRight_toLeftOf="@id/tVVPraiseNum"
        app:layout_constraintTop_toTopOf="@id/tVVPraiseNum" />

    <ImageView
        android:id="@+id/tVVShareImg"
        android:layout_width="@dimen/d16"
        android:layout_height="@dimen/d16"
        android:layout_marginRight="2dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/gray_share"
        app:layout_constraintBottom_toBottomOf="@id/tVVShare"
        app:layout_constraintRight_toLeftOf="@id/tVVShare"
        app:layout_constraintTop_toTopOf="@id/tVVShare" />

    <View
        android:id="@+id/tVVLine"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/d14"
        android:background="@color/gray_F7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tVVPraiseNum" />

</androidx.constraintlayout.widget.ConstraintLayout>