<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <ImageView
        android:id="@+id/tAPicHeadImg"
        android:layout_width="@dimen/d44"
        android:layout_height="@dimen/d44"
        android:layout_marginLeft="@dimen/d14"
        android:layout_marginTop="@dimen/d14"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tAPicFocus"
        android:layout_width="@dimen/d60"
        android:layout_height="@dimen/d24"
        android:layout_marginRight="@dimen/d14"
        android:background="@drawable/red_border_focus_radius_10_shape"
        android:gravity="center"
        android:text="@string/AddFocus"
        android:textColor="@color/main_red"
        android:textSize="@dimen/s14"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tAPicHeadImg" />

    <TextView
        android:id="@+id/tAPicName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/black_333"
        android:textSize="@dimen/s16"
        app:layout_constraintLeft_toRightOf="@id/tAPicHeadImg"
        app:layout_constraintRight_toLeftOf="@id/tAPicFocus"
        app:layout_constraintTop_toTopOf="@id/tAPicHeadImg" />

    <TextView
        android:id="@+id/tAPicIntro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/gray_999"
        android:textSize="@dimen/s12"
        app:layout_constraintLeft_toLeftOf="@id/tAPicName"
        app:layout_constraintRight_toRightOf="@id/tAPicName"
        app:layout_constraintTop_toBottomOf="@id/tAPicName" />

    <ImageView
        android:id="@+id/tAPicCodeImg"
        android:layout_width="@dimen/d14"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/blue_code"
        app:layout_constraintLeft_toLeftOf="@id/tAPicName"
        app:layout_constraintTop_toBottomOf="@id/tAPicIntro" />

    <TextView
        android:id="@+id/tAPicCodeTag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:text="@string/TagTCode"
        android:textColor="@color/gray_999"
        android:textSize="@dimen/s12"
        app:layout_constraintBottom_toBottomOf="@id/tAPicCodeImg"
        app:layout_constraintLeft_toRightOf="@id/tAPicCodeImg"
        app:layout_constraintTop_toTopOf="@id/tAPicCodeImg" />

    <TextView
        android:id="@+id/tAPicCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_999"
        android:textSize="@dimen/s12"
        app:layout_constraintBottom_toBottomOf="@id/tAPicCodeTag"
        app:layout_constraintLeft_toRightOf="@id/tAPicCodeTag"
        app:layout_constraintRight_toRightOf="@id/tAPicFocus"
        app:layout_constraintTop_toTopOf="@id/tAPicCodeTag" />

    <TextView
        android:id="@+id/tAPicTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d14"
        android:layout_marginRight="@dimen/d14"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/black_333"
        android:textSize="@dimen/s16"
        app:layout_constraintLeft_toLeftOf="@id/tAPicHeadImg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tAPicCodeImg" />

    <TextView
        android:id="@+id/tAPicDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="@color/gray_666"
        android:textSize="@dimen/s14"
        app:layout_constraintLeft_toLeftOf="@id/tAPicTitle"
        app:layout_constraintRight_toRightOf="@id/tAPicTitle"
        app:layout_constraintTop_toBottomOf="@id/tAPicTitle" />

    <ImageView
        android:id="@+id/tAPicImg"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="@id/tAPicHeadImg"
        app:layout_constraintTop_toBottomOf="@id/tAPicDes" />

    <TextView
        android:id="@+id/tAPicPraiseNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d14"
        android:layout_marginRight="@dimen/d14"
        android:text="@string/Praise"
        android:textColor="@color/gray_999"
        android:textSize="@dimen/s14"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tAPicImg" />

    <ImageView
        android:id="@+id/tAPicPraiseImg"
        android:layout_width="@dimen/d16"
        android:layout_height="@dimen/d16"
        android:layout_marginRight="2dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/un_praise"
        app:layout_constraintBottom_toBottomOf="@id/tAPicPraiseNum"
        app:layout_constraintRight_toLeftOf="@id/tAPicPraiseNum"
        app:layout_constraintTop_toTopOf="@id/tAPicPraiseNum" />

    <TextView
        android:id="@+id/tAPicShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/d36"
        android:text="@string/Share"
        android:textColor="@color/gray_999"
        android:textSize="@dimen/s14"
        app:layout_constraintBottom_toBottomOf="@id/tAPicPraiseNum"
        app:layout_constraintRight_toLeftOf="@id/tAPicPraiseNum"
        app:layout_constraintTop_toTopOf="@id/tAPicPraiseNum" />

    <ImageView
        android:id="@+id/tAPicShareImg"
        android:layout_width="@dimen/d16"
        android:layout_height="@dimen/d16"
        android:layout_marginRight="2dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/gray_share"
        app:layout_constraintBottom_toBottomOf="@id/tAPicShare"
        app:layout_constraintRight_toLeftOf="@id/tAPicShare"
        app:layout_constraintTop_toTopOf="@id/tAPicShare" />

    <View
        android:id="@+id/tAPicLine"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/d14"
        android:background="@color/gray_F7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tAPicPraiseNum" />

</androidx.constraintlayout.widget.ConstraintLayout>